Fixed: Horizontal ScrollBar on entire app look is fixed

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,15 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+
+/* Hide all scrollbars globally */
+*::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
